# rust-try-vergen

./: Cargo.toml
